fixed header and some spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@
 		background-color: rgba(40,40,40,255);
 	}
 	header{
-		padding: 10vh 10VW 10px 10vw;   /* N E S W */
+		padding: 10px 10VW 10px 10vw;   /* N E S W */
 	}
 	main{
 		padding: 10px;
